# allqrmap

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Procfile  README.md  all_restaurants.json  auto_fix.js  broken_links.json  build_data.js  check_links.js  coords_cache.json  get_coords.js  get_coords_iq.js  get_coords_parallel.js  get_coords_slow.js  get_kalan.js  package-lock.json  package.json  qrmenufinder.json  reecheck.js  render.yaml  restaurants.db  restaurants.json  update_coords.json  update_db.js  updated_restaurants.json  verified_2026-05-04T14-28-35.json  verified_2026-05-04T14-33-35.json  verified_2026-05-04T14-38-36.json  verified_2026-05-04T14-43-36.json  verified_2026-05-04T14-48-38.json  verified_2026-05-04T14-53-39.json  verified_2026-05-04T14-58-40.json  verified_2026-05-04T15-03-41.json  verified_2026-05-04T15-08-42.json  verified_2026-05-04T15-13-43.json  verified_2026-05-04T15-18-44.json  verified_2026-05-04T15-23-44.json  verified_2026-05-04T15-28-45.json  (+24 more)
src/: main.rs
static/: index.html  script.js  style.css
